Made some changes

--- a/GsNUM/game/templates/game/index.html
+++ b/GsNUM/game/templates/game/index.html
@@ -4,17 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess the Number</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'game/styles.css' %}">
 </head>
-<body>
-    <h1>Guess the Number</h1>
-    <form method="post">
-        {% csrf_token %}
-        <label for="guess">Guess a number between 1 and 100:</label><br>
-        <input type="number" id="guess" name="guess" required><br>
-        <button type="submit">Submit Guess</button>
-    </form>
-    {% if message %}
-        <p>{{ message }}</p>
-    {% endif %}
+<body onload="changeM()">
+<div class="loader"></div>
+    <nav>
+    <h2>Guess the number </h2>
+    </nav>
+    <header>
+
+    <div class="cen">
+    <div class="thediv">
+        <h1>Guess the Number</h1>
+        <form method="post" >
+            {% csrf_token %}
+            <label for="guess">Guess a number between 1 and 100:</label><br>
+            <input type="number" id="guess" name="guess" required><br>
+            <button type="submit">Submit Guess</button>
+        </form>
+        
+        {% if message %}
+        <div class="message"></div>
+            <p>{{ message }}</p>
+        {% endif %}
+    </div>
+  </div>
+
+    
+    </header>
+    <footer>Copyright @ 2023</footer>
+    <script>
+      // window.addEventListener("load", function (e) {
+      //   document.querySelector(".loader").classList.add("remove");
+      //   setTimeout(() => {
+      //     document.querySelector(".remove").style.display = "none";
+      //   }, 200);
+      // });
+      let changeM=()=>{
+        let mesageDiv = document.querySelector('.message')
+        mesageDiv.classList.add('mew')
+        setTimeout(() => {
+          mesageDiv.classList.remove('mew')
+          mesageDiv.style.display = 'none'
+        }, 1000);
+       
+      }
+     
+    </script>
+
 </body>
 </html>
